overflow-x issue fix, style changes + small refactor

--- a/pmboard-gui-bp3/src/components/leftMenu/leftMenu.module.css
+++ b/pmboard-gui-bp3/src/components/leftMenu/leftMenu.module.css
@@ -1,7 +1,6 @@
 .container {
     background-image: linear-gradient(180deg,#4e73df 10%,#224abe 100%);
     height: 100%;
-    width: 230px;
     overflow-x: hidden;
     padding-top: 20px;
 }
