--- a/pmboard-gui-bp3/src/components/pages/pws/tabs/summaryTab/summaryTab.module.css
+++ b/pmboard-gui-bp3/src/components/pages/pws/tabs/summaryTab/summaryTab.module.css
@@ -6,7 +6,10 @@
 }
 
 .secondary_card {
-    grid-template-columns: 230px 100%;
+    display: grid;
+    grid-template-columns: 230px auto;
+    grid-template-rows: auto 1em;
+    grid-gap: 0;
 }
 
 .data_container {
